# ekumenme

./: .gitignore  ANALYTICS_DASHBOARD_IMPLEMENTATION_PLAN.md  AUTHENTICATION_FIX_SUMMARY.md  Ekumen-implementation-plan.md  FORMATTING_FIX_SUMMARY.md  LOCAL_DEVELOPMENT_GUIDE.md  MARKDOWN_RENDERING_FIX.md  MIGRATION_COMPLETE.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_1_2_COMPLETE_SUMMARY.md  README.md  START_SERVERS.md  SYSTEM_PERFORMANCE_ANALYSIS.md  TAVILY_INTEGRATION_SUMMARY.md  claude_desktop_config.json  docker-compose.yml  init-db.sql  start-dev.sh
Ekumen-assistant/: .env.example  .gitignore  ACTUAL_FIXES_SUMMARY.md  ADMIN_API_OPTIMIZATION_SUMMARY.md  AGENTS_FOLDER_CLEANUP_SUMMARY.md  CLEANUP_SUMMARY.md  (+131 more)
agricultural-backend/: .env  Dockerfile  EPHY_IMPORT_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  simple_test.py
agricultural-backend/app/: minimal_main.py
agricultural-backend/app/api/v1/: api.py
agricultural-backend/app/api/v1/endpoints/: compliance.py  exploitations.py  health.py
agricultural-backend/app/core/: database.py
agricultural-backend/app/services/: ephy_import.py
agricultural-backend/app/tasks/: cleanup.py  compliance_check.py  mesparcelles_sync.py  reports.py
agricultural-backend/data/ephy/: mfsc_et_mixte_composition_Windows-1252.csv  permis_de_commerce_parallele_Windows-1252.csv  produits_classe_et_mention_danger_Windows-1252.csv
agricultural-backend/scripts/: api_ephy_test.py  init_db.sql  seed_data.py  simple_ephy_test.py  test_ephy_import.py
(+807 files in other folders)
